# LearnAndCode

./: README.md  virtual_field.py
C++/gmsh/: CMakeLists.txt  main.cpp  mesh+1.geo  mesh+1.msh  pacman.geo  pacman.msh  untitled.geo  untitled.msh
C++/readCSV/: main.cpp  mesh.vtk.csv
Python/: virtual_field.py
